<resources>
    <string name="app_name" translatable="false">Bleach Quiz App</string>
    <string name="title_text" translatable="false">Bleach Quiz App</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="hint_default_text">Click here to see if there is a hint available for this question!</string>
    <string name="hint_unavailable_text">Sorry, there is no hint available.</string>
    <string name="score_text">Score: 0</string>
    <string name="question_status_answered">You already answered this question.</string>
    <string name="check_button">Check</string>
    <string name="cheat_button">Cheat?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_warning">Are you sure you want to cheat? Cheaters never prosper...</string>
    <string name="cheat_shame">CHEATERS NEVER WIN! No points for you.</string>
    <string name="disappointed_text">I\'m disappointed in you...</string>
    <string name="final_score_text">Final Score:</string>
    <string name="quiz_over_text">Quiz Over</string>
    <string name="share_final_score">This was my final score for the Bleach Quiz App! Check me out :)</string>

    <string name="question_1">The anime Bleach features a main character with bright red hair.</string>

    <string name="question_2">The author of the Bleach manga series is named Tite Kubo.</string>

    <string name="question_3">Ichigo is the only one in his family with the ability to see spirits.</string>
    <string name="question_3_hint">How does Ichigo\'s younger sister, Karin, find out that Ichigo is a Shinigami?</string>

    <string name="question_4">Ichigo witnissed his mother die in a car crash when he was a child.</string>

    <string name="question_5">Toshiro Hitsugaya is the only Bleach character with an ice-type zanpakto.</string>
    <string name="question_5_hint">What kind of zanpakto does Rukia have?</string>

    <string name="question_6">Ichigo is part hollow.</string>
    <string name="question_6_hint">How does Ichigo defeat Ulquiorra at the end of the Arrancar arc?</string>

    <string name="question_7">The primary military division in the Soul Society is split into 13 different
        squads, each with its own commanding captain. </string>

    <string name="question_8">Which one of Ichigo\'s friends is a Quincy?</string>
    <string name="question_8_hint">He wears glasses.</string>
    <string-array name="question_8_answers">
        <item>Uryu</item>
        <item>Uryu Ishida</item>
        <item>Ishida</item>
        <item>Ishida Uryu</item>
    </string-array>

    <string name="question_9">Who is the captain of squad 10?</string>
    <string name="question_9_hint">He has an ice-type zanpakto.</string>
    <string name="restart_quiz_text">Try Quiz Again?</string>
    <string name="share_button">Share Your Score?</string>
    <string-array name="question_9_answers">
        <item>A. Jushiro Ukitake</item>
        <item>B. Toshiro Itsugaya</item>
        <item>C. Renji Abarai</item>
        <item>D. Sui Feng</item>
    </string-array>

</resources>
