<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".QuizOverActivity">

    <TextView
        android:id="@+id/quiz_over_view"
        android:text="@string/quiz_over_text"
        android:textSize="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/final_score_view"
        android:text="@string/final_score_text"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/restart_quiz_button"
        android:text="@string/restart_quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>